// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawingCanvas click_and_drag 1`] = `
<canvas
  data-snapshot-image="c41069b0260694da34d4da2ffad951b8ccd16b7ade341652f29c84ee002a50a57ffdd22f72d43e4882d97a015d71b35f2e95cf4650acdae00694867c13871c6f"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;

exports[`drawingCanvas mousemove_multiple 1`] = `
<canvas
  data-snapshot-image="83b6086f8a632e7603bbc0bcaee01c3a7c2a190b295c5fdfee7cd96122b79f23b1e7123523a6663d3e4a9b203058d9f71948b01dc785b8dedb389574e2a058ab"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;

exports[`drawingCanvas mousemove_singular 1`] = `
<canvas
  data-snapshot-image="d474d496f5ac647eb8a22d728f868f7aa32bb99db06c26dd0a37a106b14693b1a769e699d29e0d423c636192410a55d9185e807c708534ff5f129f5d8ad1cb9d"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;
